--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     <!-- nav splashscreen -->
     <link rel="stylesheet" href="./css/nav-splalshscreen.css" />
 
-    <!-- nav splashscreen -->
+    <!-- splashscreen text-->
     <link rel="stylesheet" href="./css/splashscreen-text.css" />
 
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
+
+    <!-- preloader js -->
+    <script src="./js/preLoader.js" defer></script>
   </head>
   <body>
     <!-- splash screen navbar start -->
@@ -67,11 +70,13 @@
       <div class="container splash-text-section">
         <a href="./homepage.html" class="splash-enter">ENTER</a>
 
-        <img
-          src="./img/SPLASH PAGE/splash-text-img.png"
-          alt=""
-          class="splash-text-img"
-        />
+        <div class="splash-text-img">
+          <img
+            src="./img/SPLASH PAGE/splash-text-img.png"
+            alt=""
+            class="splash-text-img"
+          />
+        </div>
 
         <p class="splash-desc">
           join the meta tuners resistance as we battle against the machine. we
@@ -118,5 +123,8 @@
       </div>
     </footer>
     <!-- footer end -->
+
+    <!-- preloader -->
+    <div id="preloader"></div>
   </body>
 </html>
