--- a/homepage.html
+++ b/homepage.html
@@ -397,12 +397,7 @@
         <div class="steps">
           <!-- step one -->
           <div class="step">
-            <div
-              class="step-image"
-              data-tilt
-              data-tilt-glare
-              data-tilt-max-glare="0.05"
-            >
+            <div class="step-image" data-tilt>
               <img src="./img/ROADMAP/RM_Icon1.png" alt="" class="step-img" />
             </div>
             <div class="step-info">
@@ -417,12 +412,7 @@
 
           <!-- step two -->
           <div class="step">
-            <div
-              class="step-image"
-              data-tilt
-              data-tilt-glare
-              data-tilt-max-glare="0.05"
-            >
+            <div class="step-image" data-tilt>
               <img src="./img/ROADMAP/RM_Icon2.png" alt="" class="step-img" />
             </div>
             <div class="step-info">
@@ -437,12 +427,7 @@
 
           <!-- step three -->
           <div class="step">
-            <div
-              class="step-image"
-              data-tilt
-              data-tilt-glare
-              data-tilt-max-glare="0.05"
-            >
+            <div class="step-image" data-tilt>
               <img src="./img/ROADMAP/RM_Icon3.png" alt="" class="step-img" />
             </div>
             <div class="step-info">
@@ -458,12 +443,7 @@
 
           <!-- step four -->
           <div class="step">
-            <div
-              class="step-image"
-              data-tilt
-              data-tilt-glare
-              data-tilt-max-glare="0.05"
-            >
+            <div class="step-image" data-tilt>
               <img src="./img/ROADMAP/RM_Icon4.png" alt="" class="step-img" />
             </div>
             <div class="step-info">
