--- a/homepage.html
+++ b/homepage.html
@@ -227,15 +227,23 @@
     <!-- slider section start -->
     <section class="slider">
       <div class="container slider-section">
+        <div class="charector-tabs">
+          <div class="charector-tab jdm btn">JDM</div>
+          <div class="charector-tab exotic btn">exotic</div>
+          <div class="charector-tab muscle btn">muscle</div>
+          <div class="charector-tab euro btn">euro</div>
+        </div>
+
         <div class="slider-item">
           <div class="slider-text">
             <h2 class="slider-item-title">jdm</h2>
             <h3 class="slider-item-subtitle">"The imposters"</h3>
             <p class="slider-item-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-              dolores autem quos excepturi architecto, nemo quaerat harum quasi
-              quo porro! Ipsam ipsum officia eum? Quaerat molestias iste
-              incidunt architecto maiores.
+              It’s been 50 years since the conception of the JDM Tuner scene.
+              This group formed the early stages of drifting, modifying and
+              racing. Now, the elicit street racers go under cover during the
+              day, importing car parts from all over the world, equipping the
+              Resistance for the battle against The Machine.
             </p>
             <h2 class="slider-item-info">Info</h2>
             <ul class="slider-item-links">
@@ -245,15 +253,19 @@
               </li>
               <li class="slider-item-link">
                 Meta Tuners
-                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#"
+                  >LooksRare <i class="fa-solid fa-arrow-right"></i
+                ></a>
               </li>
               <li class="slider-item-link">
                 Meta Tuners
-                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
               </li>
               <li class="slider-item-link">
                 Meta Tuners
-                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#"
+                  >Analytics <i class="fa-solid fa-arrow-right"></i
+                ></a>
               </li>
             </ul>
           </div>
