--- a/homepage.html
+++ b/homepage.html
@@ -51,12 +51,17 @@
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
 
-    <!-- js -->
+    <!--  navbar js -->
     <script src="./js/app.js" defer></script>
+
+    <!-- tilt js -->
     <script src="./js/vanilla-tilt.js" defer></script>
 
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
+
+    <!-- slider js -->
+    <script src="./js/slider.js" defer></script>
   </head>
   <body>
     <!-- nav homepage start-->
@@ -228,13 +233,13 @@
     <section class="slider">
       <div class="container slider-section">
         <div class="charector-tabs">
-          <div class="charector-tab jdm btn">JDM</div>
-          <div class="charector-tab exotic btn">exotic</div>
-          <div class="charector-tab muscle btn">muscle</div>
-          <div class="charector-tab euro btn">euro</div>
+          <div class="charector-tab jdm btn" data-tab="1">JDM</div>
+          <div class="charector-tab exotic btn" data-tab="2">exotic</div>
+          <div class="charector-tab muscle btn" data-tab="3">muscle</div>
+          <div class="charector-tab euro btn" data-tab="4">euro</div>
         </div>
 
-        <div class="slider-item">
+        <div class="slider-item slider-item-1 active-slider-item">
           <div class="slider-text">
             <h2 class="slider-item-title">jdm</h2>
             <h3 class="slider-item-subtitle">"The imposters"</h3>
@@ -272,6 +277,265 @@
           <div class="slider-images">
             <img
               src="./img/COLLECTION/JDM Character.png"
+              alt="jdm"
+              class="charector-img"
+            />
+
+            <div class="marquee">
+              <ul class="marquee-content">
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img5.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img6.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img7.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img8.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <a href="#" class="btn slider-btn">mint coming soon</a>
+        </div>
+        <div class="slider-item slider-item-2">
+          <div class="slider-text">
+            <h2 class="slider-item-title">EXOTIC</h2>
+            <h3 class="slider-item-subtitle">"The Widowmakers"</h3>
+            <p class="slider-item-desc">
+              Coined “The Widowmakes” by the scene due to their insanely fast
+              horsepower numbers and expensive gear. The Exotics play by their
+              own rules. Exotics are amongst the most influential Tuners in
+              Hardrive City. While some Exotic Tuners use their HP and clout to
+              assist the Resistance, others use it for self-seeking missions
+              within the city.
+            </p>
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >LooksRare <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >Analytics <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="slider-images">
+            <img
+              src="./img/COLLECTION/EXOTIC Character.png"
+              alt="jdm"
+              class="charector-img"
+            />
+
+            <div class="marquee">
+              <ul class="marquee-content">
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img5.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img6.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img7.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img8.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <a href="#" class="btn slider-btn">mint coming soon</a>
+        </div>
+        <div class="slider-item slider-item-3">
+          <div class="slider-text">
+            <h2 class="slider-item-title">MUSCLE</h2>
+            <h3 class="slider-item-subtitle">"The GearHeads"</h3>
+            <p class="slider-item-desc">
+              Through their heritage of naturally aspirated technology and
+              internal combustion engines; The Muscle Tuners supply the
+              Resistance with the much needed power to fight off the Machine.
+              With their traditional tuning methods, the Muscle Tuners are not
+              as easily affected by electrical and malware attacks caused by the
+              Machine.
+            </p>
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >LooksRare <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >Analytics <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="slider-images">
+            <img
+              src="./img/COLLECTION/MUSCLE Character.png"
+              alt="jdm"
+              class="charector-img"
+            />
+
+            <div class="marquee">
+              <ul class="marquee-content">
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img5.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img6.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img7.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img8.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+                </li>
+                <li>
+                  <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <a href="#" class="btn slider-btn">mint coming soon</a>
+        </div>
+        <div class="slider-item slider-item-4">
+          <div class="slider-text">
+            <h2 class="slider-item-title">EURO</h2>
+            <h3 class="slider-item-subtitle">"The Engineers"</h3>
+            <p class="slider-item-desc">
+              Known for their high performance and engineering skills, the Euro
+              Tuners use their expertise to equip the Resistance with cutting
+              edge technology. Euro Tuners have also been syphoning car-tech
+              intel from deep within The Machines vaults in Hardrive City.
+            </p>
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >LooksRare <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+              </li>
+              <li class="slider-item-link">
+                Meta Tuners
+                <a href="#"
+                  >Analytics <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="slider-images">
+            <img
+              src="./img/COLLECTION/EURO Character.png"
               alt="jdm"
               class="charector-img"
             />
