--- a/homepage.html
+++ b/homepage.html
@@ -233,7 +233,7 @@
     <section class="slider">
       <div class="container slider-section">
         <div class="charector-tabs">
-          <div class="charector-tab jdm btn" data-tab="1">JDM</div>
+          <div class="charector-tab jdm btn active-tab" data-tab="1">JDM</div>
           <div class="charector-tab exotic btn" data-tab="2">exotic</div>
           <div class="charector-tab muscle btn" data-tab="3">muscle</div>
           <div class="charector-tab euro btn" data-tab="4">euro</div>
