--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
+
+    <!-- logo-animation js -->
+    <script src="./js/logoAnimation.js" defer></script>
   </head>
   <body>
     <!-- splash screen navbar start -->
