--- a/homepage.html
+++ b/homepage.html
@@ -850,6 +850,12 @@
     <!-- footer end -->
 
     <!-- preloader -->
-    <div id="preloader"></div>
+    <div id="preloader">
+      <img
+        src="./img/SPLASH PAGE/MetaTuners_M.png"
+        alt=""
+        class="preloader-img"
+      />
+    </div>
   </body>
 </html>
