--- a/homepage.html
+++ b/homepage.html
@@ -851,11 +851,7 @@
 
     <!-- preloader -->
     <div id="preloader">
-      <img
-        src="./img/SPLASH PAGE/MetaTuners_M.png"
-        alt=""
-        class="preloader-img"
-      />
+      <img src="./img/gliched-logo.gif" alt="" class="preloader-img" />
     </div>
   </body>
 </html>
