--- a/homepage.html
+++ b/homepage.html
@@ -62,6 +62,9 @@
 
     <!-- slider js -->
     <script src="./js/slider.js" defer></script>
+
+    <!-- fadeinAnimations js -->
+    <script src="./js/fadeinAnimation.js" defer></script>
   </head>
   <body>
     <!-- nav homepage start-->
@@ -151,7 +154,7 @@
             </a>
           </div>
 
-          <p>
+          <p class="welcome-section-desc">
             Our mint date will be announced soon. Please check Twitter and
             Discord for the official announcement.
           </p>
