--- a/homepage.html
+++ b/homepage.html
@@ -353,9 +353,9 @@
         <!-- slider item 2 -->
         <div class="slider-item slider-item-2">
           <div class="slider-text">
-            <h2 class="slider-item-title fade-in">EXOTIC</h2>
-            <h3 class="slider-item-subtitle fade-in">"The Widowmakers"</h3>
-            <p class="slider-item-desc fade-in">
+            <h2 class="slider-item-title">EXOTIC</h2>
+            <h3 class="slider-item-subtitle">"The Widowmakers"</h3>
+            <p class="slider-item-desc">
               Coined “The Widowmakes” by the scene due to their insanely fast
               horsepower numbers and expensive gear. The Exotics play by their
               own rules. Exotics are amongst the most influential Tuners in
@@ -363,8 +363,8 @@
               assist the Resistance, others use it for self-seeking missions
               within the city.
             </p>
-            <h2 class="slider-item-info fade-in">Info</h2>
-            <ul class="slider-item-links fade-in">
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
               <li class="slider-item-link">
                 Meta Tuners
                 <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
@@ -391,10 +391,10 @@
             <img
               src="./img/COLLECTION/EXOTIC Character.png"
               alt="jdm"
-              class="charector-img fade-in"
+              class="charector-img"
             />
 
-            <div class="marquee fade-in">
+            <div class="marquee">
               <ul class="marquee-content">
                 <li>
                   <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
@@ -442,9 +442,9 @@
         <!-- slider item three -->
         <div class="slider-item slider-item-3">
           <div class="slider-text">
-            <h2 class="slider-item-title fade-in">MUSCLE</h2>
-            <h3 class="slider-item-subtitle fade-in">"The GearHeads"</h3>
-            <p class="slider-item-desc fade-in">
+            <h2 class="slider-item-title">MUSCLE</h2>
+            <h3 class="slider-item-subtitle">"The GearHeads"</h3>
+            <p class="slider-item-desc">
               Through their heritage of naturally aspirated technology and
               internal combustion engines; The Muscle Tuners supply the
               Resistance with the much needed power to fight off the Machine.
@@ -452,8 +452,8 @@
               as easily affected by electrical and malware attacks caused by the
               Machine.
             </p>
-            <h2 class="slider-item-info fade-in">Info</h2>
-            <ul class="slider-item-links fade-in">
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
               <li class="slider-item-link">
                 Meta Tuners
                 <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
@@ -480,10 +480,10 @@
             <img
               src="./img/COLLECTION/MUSCLE Character.png"
               alt="jdm"
-              class="charector-img fade-in"
+              class="charector-img"
             />
 
-            <div class="marquee fade-in">
+            <div class="marquee">
               <ul class="marquee-content">
                 <li>
                   <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
@@ -525,22 +525,22 @@
             </div>
           </div>
 
-          <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
+          <a href="#" class="btn slider-btn">mint coming soon</a>
         </div>
 
         <!-- slider item four -->
         <div class="slider-item slider-item-4">
           <div class="slider-text">
-            <h2 class="slider-item-title fade-in">EURO</h2>
-            <h3 class="slider-item-subtitle fade-in">"The Engineers"</h3>
-            <p class="slider-item-desc fade-in">
+            <h2 class="slider-item-title">EURO</h2>
+            <h3 class="slider-item-subtitle">"The Engineers"</h3>
+            <p class="slider-item-desc">
               Known for their high performance and engineering skills, the Euro
               Tuners use their expertise to equip the Resistance with cutting
               edge technology. Euro Tuners have also been syphoning car-tech
               intel from deep within The Machines vaults in Hardrive City.
             </p>
-            <h2 class="slider-item-info fade-in">Info</h2>
-            <ul class="slider-item-links fade-in">
+            <h2 class="slider-item-info">Info</h2>
+            <ul class="slider-item-links">
               <li class="slider-item-link">
                 Meta Tuners
                 <a href="#">Opensea <i class="fa-solid fa-arrow-right"></i></a>
@@ -567,10 +567,10 @@
             <img
               src="./img/COLLECTION/EURO Character.png"
               alt="jdm"
-              class="charector-img fade-in"
+              class="charector-img"
             />
 
-            <div class="marquee fade-in">
+            <div class="marquee">
               <ul class="marquee-content">
                 <li>
                   <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
@@ -612,7 +612,7 @@
             </div>
           </div>
 
-          <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
+          <a href="#" class="btn slider-btn">mint coming soon</a>
         </div>
       </div>
     </section>
