--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
           <input type="email" class="email-input" placeholder="email address" />
         </div>
 
-        <img src="./img/HOME PAGE/logo-2.png" class="footer-logo" alt="" />
+        <div class="footer-logo">
+          <img
+            src="./img/HOME PAGE/logo-2.png"
+            class="footer-logo-img"
+            alt=""
+          />
+        </div>
 
         <div class="footer-right-col">
           <div class="social-links-footer">
