--- a/homepage.html
+++ b/homepage.html
@@ -112,10 +112,10 @@
             <a href="#auto-shop" class="nav-homepage-link">autoshop</a>
           </li>
           <li>
-            <a href="#contact-us" class="nav-homepage-link">contact us</a>
+            <a href="#gallery" class="nav-homepage-link">gallery</a>
           </li>
           <li>
-            <a href="#gallery" class="nav-homepage-link">gallery</a>
+            <a href="#contact-us" class="nav-homepage-link">contact us</a>
           </li>
 
           <ul class="nav-homepage-social-links">
@@ -837,7 +837,7 @@
     <!-- gallery sections end -->
 
     <!-- contact section start -->
-    <section id="contact-us" class="contact">
+    <section id="contact-us" class="contact-us">
       <div class="container contact-us-section">
         <div class="contact-us-logo">
           <img
