--- a/homepage.html
+++ b/homepage.html
@@ -273,7 +273,12 @@
       </div>
 
       <div class="video-bg">
-        <video src="./vid/collection-vid.mp4" class="video" autoplay></video>
+        <video
+          autoplay
+          muted
+          src="./vid/collection-vid.mp4"
+          class="video"
+        ></video>
       </div>
     </section>
     <!-- collection section end -->
