--- a/homepage.html
+++ b/homepage.html
@@ -289,22 +289,22 @@
         <h2 class="section-title slider-section-title">Choose Your Faction</h2>
 
         <!-- slider control left -->
-        <div class="slider-control">
+        <div class="slider-control fade-in">
           <i class="fa-solid fa-angle-left slider-left"></i>
         </div>
 
         <!-- slider -->
-        <div class="slider-main">
+        <div class="slider-main fade-in">
           <!-- slider item one -->
         </div>
 
         <!-- slider control right -->
-        <div class="slider-control">
+        <div class="slider-control fade-in">
           <i class="fa-solid fa-angle-right slider-right"></i>
         </div>
 
         <!-- gallery scroll -->
-        <div class="marquee-vertical">
+        <div class="marquee-vertical fade-in">
           <ul class="marquee-content-vertical">
             <li>
               <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
@@ -346,7 +346,7 @@
         </div>
 
         <!-- slider controls dots -->
-        <div class="slider-dots">
+        <div class="slider-dots fade-in">
           <img
             src="./img/slider/jdm-dot.svg"
             alt=""
@@ -377,14 +377,14 @@
         </div>
 
         <!-- slider controls mobile -->
-        <div class="slider-controls-mobile">
+        <div class="slider-controls-mobile fade-in">
           <i class="fa-solid fa-angle-left slider-left"></i>
           <i class="fa-solid fa-angle-right slider-right"></i>
         </div>
 
         <!-- cta -->
         <div class="slider-btn-container">
-          <a href="#" class="btn slider-btn">mint coming soon</a>
+          <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
         </div>
 
         <!-- horizontal gallery -->
