--- a/homepage.html
+++ b/homepage.html
@@ -546,7 +546,7 @@
           <img
             src="./img/slider/jdm-dot.svg"
             alt=""
-            class="dot active-dot"
+            class="dot active-dot dot-1"
             data-slide="0"
           />
           <div class="line"></div>
@@ -554,21 +554,21 @@
             src="./img/slider/exotic-dot.svg"
             data-slide="1"
             alt=""
-            class="dot"
+            class="dot dot-2"
           />
           <div class="line"></div>
           <img
             src="./img/slider/muscle-dot.svg"
             data-slide="2"
             alt=""
-            class="dot"
+            class="dot dot-3"
           />
           <div class="line"></div>
           <img
             src="./img/slider/euro-dot.svg"
             alt=""
             data-slide="3"
-            class="dot"
+            class="dot dot-4"
           />
         </div>
 
