--- a/homepage.html
+++ b/homepage.html
@@ -280,8 +280,14 @@
           class="video"
         ></video>
       </div>
+
+      <!-- mobile image for video -->
+      <img src="./img/CONTAINERIMAGES/Collection_Mobile_image.jpg" alt="" />
     </section>
     <!-- collection section end -->
+
+    <!-- instead of video on mobile -->
+    <!-- <div class="bg-img video-img-mobile"></div> -->
 
     <!-- slider section start -->
     <section class="slider" id="buy-metatuner">
