--- a/homepage.html
+++ b/homepage.html
@@ -282,7 +282,11 @@
       </div>
 
       <!-- mobile image for video -->
-      <img src="./img/CONTAINERIMAGES/Collection_Mobile_image.jpg" alt="" />
+      <img
+        src="./img/CONTAINERIMAGES/Collection_Mobile_image.jpg"
+        alt=""
+        class="fade-in"
+      />
     </section>
     <!-- collection section end -->
 
