--- a/homepage.html
+++ b/homepage.html
@@ -285,7 +285,7 @@
       <img
         src="./img/CONTAINERIMAGES/Collection_Mobile_image.jpg"
         alt=""
-        class="fade-in"
+        class="fade-in video-image"
       />
     </section>
     <!-- collection section end -->
