--- a/homepage.html
+++ b/homepage.html
@@ -150,7 +150,9 @@
     <!-- nav homepage end-->
 
     <!-- bg image one start -->
-    <div class="bg-img bg-img-1"></div>
+    <div class="bg-img bg-img-1">
+      <div class="placeholder"></div>
+    </div>
     <!-- bg image one end -->
 
     <!-- welcome section start  -->
@@ -249,7 +251,9 @@
     <!-- welcome section end  -->
 
     <!-- bg img two start-->
-    <div class="bg-img bg-img-2"></div>
+    <div class="bg-img bg-img-2">
+      <div class="placeholder"></div>
+    </div>
     <!-- bg img two end-->
 
     <!-- collection section start -->
