--- a/homepage.html
+++ b/homepage.html
@@ -144,7 +144,12 @@
           <i class="fa-solid fa-xmark close-menu"></i>
         </ul>
 
-        <i class="fa-solid fa-bars hamburger"></i>
+        <div class="nav-items">
+          <!-- cta in nav -->
+          <a href="#" class="nav-cta btn">mint now</a>
+
+          <i class="fa-solid fa-bars hamburger"></i>
+        </div>
       </div>
     </nav>
     <!-- nav homepage end-->
